--- a/package.json
+++ b/package.json
@@ -29,18 +29,18 @@
     "chai-as-promised": "^7.1.1",
     "gulp": "^4.0.0",
     "gulp-istanbul": "^1.1.1",
-    "gulp-jsdoc3": "^2.0.0",
+    "gulp-jsdoc3": "^3.0.0",
     "gulp-jshint": "^2.0.0",
-    "gulp-mocha": "^6.0.0",
-    "jsdoc": "^3.6.1",
+    "gulp-mocha": "^8.0.0",
+    "jsdoc": "^4.0.0",
     "jshint": "^2.9.1",
     "jshint-stylish": "^2.1.0",
-    "mocha": "^5.2.0",
-    "nock": "^10.0.3"
+    "mocha": "^10.2.0",
+    "nock": "^13.3.0"
   },
   "dependencies": {
     "@log4js-node/log4js-api": "^1.0.2",
-    "node-fetch": "^2.3.0",
+    "node-fetch": "2",
     "underscore": "^1.8.3"
   }
 }
