--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.2.1",
   "description": "Simple Solr Node Client Project",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "build": "npx babel src --out-dir dist"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/EnzoRobaina/solr-node.git"
@@ -25,6 +27,9 @@
   },
   "homepage": "https://github.com/godong9/solr-node/wiki",
   "devDependencies": {
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "gulp": "^4.0.0",
